# server/internal/api/auth/infra/routes.go
@@ -1,45 +1,20 @@
 package infra
 
 import (
-	"net/http"
-
-	"github.com/danielgtaylor/huma/v2"
 	"github.com/franciscoluna/envoy/server/internal/api/auth/application"
 	auth "github.com/franciscoluna/envoy/server/internal/api/auth/domain"
+	"github.com/franciscoluna/envoy/server/internal/shared"
+	"github.com/go-chi/chi/v5"
 )
 
-func RegisterRoutes(api huma.API, authService auth.TokenProvider, regUC *application.RegisterWithEmailUseCase, loginUC *application.LoginWithEmailUseCase) {
+func RegisterRoutes(r chi.Router, authService auth.TokenProvider, regUC *application.RegisterWithEmailUseCase, loginUC *application.LoginWithEmailUseCase) {
 	regHandler := NewRegisterHandler(regUC, authService)
 	loginHandler := NewLoginHandler(loginUC, authService)
 	userHandler := NewUserHandler(authService)
+	logoutHandler := NewLogoutHandler()
 
-	huma.Register(api, huma.Operation{
-		OperationID: "post-register",
-		Method:      http.MethodPost,
-		Path:        "/api/v1/auth/register",
-		Summary:     "Register user",
-		Description: "Creates a new user within the system",
-		Tags:        []string{"Auth"},
-	}, regHandler.Handle)
-
-	huma.Register(api, huma.Operation{
-		OperationID: "post-login",
-		Method:      http.MethodPost,
-		Path:        "/api/v1/auth/login",
-		Summary:     "Login user",
-		Description: "Grants access to an existing user within the system",
-		Tags:        []string{"Auth"},
-	}, loginHandler.Handle)
-
-	huma.Register(api, huma.Operation{
-		OperationID: "get-me",
-		Method:      http.MethodGet,
-		Path:        "/api/v1/me",
-		Summary:     "Get current user",
-		Description: "Get the current authenticated user's profile",
-		Tags:        []string{"User"},
-		Security: []map[string][]string{
-			{"bearerAuth": {}},
-		},
-	}, userHandler.Handle)
+	r.Post("/api/v1/auth/register", shared.Action(regHandler.Handle))
+	r.Post("/api/v1/auth/login", shared.Action(loginHandler.Handle))
+	r.Post("/api/v1/auth/logout", shared.Action(logoutHandler.Handle))
+	r.With(shared.AuthMiddleware(authService)).Get("/api/v1/me", shared.Action(userHandler.Handle))
 }
